# BugFix-Automator

./: .env.example  .gitignore  BFV August 2025 Technical Resource Center .xlsx  README.md  SETUP_PASO_A_PASO.md  pyproject.toml
src/bugfix_automator/: __init__.py  config.py  drive_client.py  jira_client.py  main.py  models.py  processor.py  report_generator.py  webapp.py
src/bugfix_automator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_processor.py
