[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugfix-automator"
version = "0.1.0"
description = "SaaS base para verificación automática de bugs con Jira + Google Sheets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "BugFix Automator"}]
dependencies = [
  "requests>=2.31.0",
  "google-api-python-client>=2.149.0",
  "google-auth>=2.35.0",
  "google-auth-oauthlib>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
